SI-2581-starting-location-off (#29)
* patch start loc when trip begins
