# docs/swagger.yaml
@@ -1,22 +1,39 @@
 basePath: /v1
 definitions:
-  internal_api.Endpoint:
+  github_com_DIMO-Network_trips-api_internal_api_types.Location:
     properties:
-      time:
-        example: "2023-05-04T09:00:00Z"
-        type: string
+      latitude:
+        type: number
+      longitude:
+        type: number
     type: object
-  internal_api.VehicleTripResp:
+  github_com_DIMO-Network_trips-api_internal_api_types.TripDetails:
     properties:
       end:
-        $ref: '#/definitions/internal_api.Endpoint'
+        $ref: '#/definitions/github_com_DIMO-Network_trips-api_internal_api_types.TripEnd'
       id:
         example: 2Y83IHPItgk0uHD7hybGnA776Bo
         type: string
       start:
-        $ref: '#/definitions/internal_api.Endpoint'
+        $ref: '#/definitions/github_com_DIMO-Network_trips-api_internal_api_types.TripStart'
     type: object
-  internal_api.VehicleTripsResp:
+  github_com_DIMO-Network_trips-api_internal_api_types.TripEnd:
+    properties:
+      location:
+        $ref: '#/definitions/github_com_DIMO-Network_trips-api_internal_api_types.Location'
+      time:
+        type: string
+    type: object
+  github_com_DIMO-Network_trips-api_internal_api_types.TripStart:
+    properties:
+      estimatedLocation:
+        $ref: '#/definitions/github_com_DIMO-Network_trips-api_internal_api_types.Location'
+      location:
+        $ref: '#/definitions/github_com_DIMO-Network_trips-api_internal_api_types.Location'
+      time:
+        type: string
+    type: object
+  github_com_DIMO-Network_trips-api_internal_api_types.VehicleTrips:
     properties:
       currentPage:
         example: 1
@@ -26,7 +43,7 @@ definitions:
         type: integer
       trips:
         items:
-          $ref: '#/definitions/internal_api.VehicleTripResp'
+          $ref: '#/definitions/github_com_DIMO-Network_trips-api_internal_api_types.TripDetails'
         type: array
     type: object
 info:
@@ -54,7 +71,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/internal_api.VehicleTripsResp'
+            $ref: '#/definitions/github_com_DIMO-Network_trips-api_internal_api_types.VehicleTrips'
       security:
       - BearerAuth: []
 securityDefinitions:
